<resources>
    <string name="app_name">SeeSound</string>
    <string name="home_title">Noise Level Monitor</string>
    <string name="db_label">dB</string>
    <string name="start_monitoring">Start Monitoring</string>
    <string name="stop_monitoring">Stop Monitoring</string>
    <string name="save_reading">Save Reading</string>
    <string name="view_history">View History</string>
    <string name="permission_required">Microphone permission is required to measure noise levels.</string>
    <string name="history_title">History</string>
    <string name="no_records">No records yet</string>
</resources>